2008-12-05  Dean Jackson  <dino@apple.com>

        Reviewed by David Hyatt.

        No longer need to add a fake listener on a document
        node in order to get events passed up to Window.
        https://bugs.webkit.org/show_bug.cgi?id=20572

        * transitions/transition-end-event-window.html:

2008-12-05  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Tim Hatcher.

        - Fix intermittent profiler test failures.  The problem is that idle
        time only shows up some times, probably dependent on if the system is
        running a little slow or has a network hiccup.  I've removed this.
        - I've also added <rdar://problem/6422004> Profiler tests fail because
        they sometimes don't have (idle) time. This is to investigate whether or
        not idle time should be showing up at all when running these tests.

        * fast/profiler/anonymous-event-handler-expected.txt:
        * fast/profiler/anonymous-function-called-from-different-contexts-expected.txt:
        * fast/profiler/anonymous-function-calls-built-in-functions-expected.txt:
        * fast/profiler/anonymous-function-calls-eval-expected.txt:
        * fast/profiler/apply-expected.txt:
        * fast/profiler/built-in-function-calls-anonymous-expected.txt:
        * fast/profiler/built-in-function-calls-user-defined-function-expected.txt:
        * fast/profiler/call-expected.txt:
        * fast/profiler/call-nodelist-as-function-expected.txt:
        * fast/profiler/calling-the-function-that-started-the-profiler-from-another-scope-expected.txt:
        * fast/profiler/compare-multiple-profiles-expected.txt:
        * fast/profiler/constructor-expected.txt:
        * fast/profiler/dead-time-expected.txt:
        * fast/profiler/document-dot-write-expected.txt:
        * fast/profiler/event-handler-expected.txt:
        * fast/profiler/execution-context-and-eval-on-same-line-expected.txt:
        * fast/profiler/heavy-view-expected.txt: