@@ -1,3 +1,14 @@
+2008-12-05  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Sam Weinig.
+        
+        Added a test for a bug I discovered while working on
+        https://bugs.webkit.org/show_bug.cgi?id=22685.
+
+        * fast/regex/non-capturing-backtracking-expected.txt: Added.
+        * fast/regex/non-capturing-backtracking.html: Added.
+        * fast/regex/resources/non-capturing-backtracking.js: Added.
+
 2008-12-05  Dean Jackson  <dino@apple.com>
 
         Reviewed by David Hyatt.
